--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>360° Panorama Viewer</title>
   
   <!-- Panolens and Three.js libraries -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/panolens@0.12.0/build/panolens.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r110/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/panolens@0.12.0/build/panolens.min.js"></script>
 
   <style>
     html, body {
@@ -67,4 +67,5 @@
     viewer.add(panorama);
   </script>
 </body>
+
 </html>
